--- a/templates/index.html
+++ b/templates/index.html
@@ -273,7 +273,7 @@
         <header class="header">
             <h1>Desmond Asemota</h1>
             <p>DevOps Engineer</p>
-            <p>john.doe@example.com</p>
+            <p>efedesmond202@yahoo.it</p>
             <p>Total Experience: 4+ Years</p>
         </header>
 
